Fix count valid email and delete button alignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -108,7 +108,7 @@ $container-border-radius: 8px;
 }
 
 .emails-input-email-delete {
-  margin: -1px -2px 0 6px;
+  margin: 0 -2px 0 6px;
   font-size: 20px;
   display: inline-block;
   vertical-align: top;
